--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,14 +1,22 @@
 body {
-    background-color: yellow;
+    background-color: rgb(4, 186, 40);
     color: rgb(255, 255, 255);
     font-family: Arial, sans-serif;
-    border: 10px solid red; 
+    border: 10px solid rgb(255, 0, 0); 
     padding: 0px; 
     margin: 0px;
 }
 
 .container {
     background-color: blue;
+}
+
+h2 {
+    color: rgb(255, 0, 0);
+}
+
+p {
+    color: blue;
 }
 
 .center {
