--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -12,12 +12,18 @@ body {
 
 h2 {
     color: rgb(255, 0, 0);
+    font-size: 15px;
     padding: 20px; 
     margin: 20px;
 }
 
+h1 {
+    font-size: 20px;
+}
+
 p {
     color: blue;
+    font-size: 10px;
     padding: 20px; 
     margin: 20px;
 }
