--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,8 +13,8 @@ body {
 h2 {
     color: rgb(255, 0, 0);
     font-size: 15px;
-    padding: 20px; 
-    margin: 20px;
+    padding-left: 20px; 
+    margin-left: 20px;
 }
 
 h1 {
@@ -24,12 +24,12 @@ h1 {
 p {
     color: blue;
     font-size: 10px;
-    padding: 20px; 
-    margin: 20px;
+    padding-left: 20px; 
+    margin-left: 20px;
 }
 
 .center {
     text-align: center;
-    padding: 20px; 
-    margin: 20px;
+    padding-left: 20px; 
+    margin-left: 20px;
 }
