--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -33,3 +33,8 @@ p {
     padding-left: 20px; 
     margin-left: 20px;
 }
+ul{
+    font-size: 25px;
+    padding-left: 20px; 
+    margin-left: 20px;
+}
