--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,6 +18,7 @@ h2 {
 }
 
 h1 {
+    color:rgb(166, 0, 255);
     font-size: 50px;
 }
 
@@ -33,7 +34,9 @@ p {
     padding-left: 20px; 
     margin-left: 20px;
 }
+
 ul{
+    color: aqua;
     font-size: 25px;
     padding-left: 20px; 
     margin-left: 20px;
